--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,22 @@
 			<artifactId>jollyday-jaxb</artifactId>
 			<version>0.29.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.36.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-calendar</artifactId>
+			<version>v3-rev20240517-2.0.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
