Setup excel generation

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
 			<artifactId>google-api-services-calendar</artifactId>
 			<version>v3-rev20240517-2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
 
 
 		<dependency>
