--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<kotlin.version>1.9.24</kotlin.version>
+		<jib.version>3.4.4</jib.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -142,6 +143,36 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib.version}</version>
+				<configuration>
+					<from>
+						<image>eclipse-temurin:21-jre</image>
+						<platforms>
+							<platform>
+								<architecture>amd64</architecture>
+								<os>linux</os>
+							</platform>
+						</platforms>
+					</from>
+					<to>
+						<image>ghcr.io/sanderdona/timesheet:latest</image>
+					</to>
+					<containerizingMode>packaged</containerizingMode>
+					<container>
+						<jvmFlags>
+							<jvmFlag>-Xms512m</jvmFlag>
+							<jvmFlag>-Xdebug</jvmFlag>
+						</jvmFlags>
+						<ports>
+							<port>8080</port>
+						</ports>
+						<format>Docker</format>
+					</container>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
