Voeg JIB via MVN package.

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,15 @@
 						<format>Docker</format>
 					</container>
 				</configuration>
+				<executions>
+					<execution>
+						<id>package</id>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
