--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,4 +20,4 @@ jobs:
           java-version: '21'
 
       - name: Build and push Docker image
-        run: mvn compile jib:build -Dimage=ghcr.io/${{ github.repository }}/timesheet:latest
+        run: mvn clean install package
