--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,17 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 378512219962-9jussfae27k7d9epnpaodh3t890p5l72.apps.googleusercontent.com
+            client-secret:
 server:
   servlet:
     context-path: /api
+
+logging:
+  level:
+    org.springframework.security: TRACE
